src/pages/Home.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

.app__heading {
	background: linear-gradient(180deg, #182637 0%, rgba(34, 93, 161, 0) 238.01%),
		 #182637 0%;
	width: 100vw;
	height: 100vh;
	color: white;
	font-family: 'Lato', sans-serif;
}

.app__navbar {
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	padding: 20px 0px;
	line-height: 20px;
	position: fixed;
	top: 0px;
	background-color: rgba(24, 38, 55, .95);
	z-index: 1000;
}

.center_image{
	align-items: center;
	text-align: center;
}

.team_description{
	text-align: center;
	color: black;
	padding-top: 10%;
}

.platform_description{
	text-align: left;
	color: white;
	padding-top: 15%;	
}

.app__navbar img:hover {
	cursor: pointer;
}

.app__navbar li {
	list-style: none;
}

.main__button a,
.signin__btn a{
	color: white;
	text-decoration: none;
}

.app__navbarLeft a,
.app__navbarRight a {
	font-size: 17px;
	text-decoration: none;
	color: #f4f4f4;
	font-weight: 500;
}

.app__navbarLeft a::after,
.app__navbarRight a::after {
	content: '';
	display: block;
	width: 0;
	height: 2px;
	background: #efaf45;
	transition: width 0.3s;
}

.app__navbarLeft a:hover::after,
.app__navbarRight a:hover::after {
	width: 100%;
}

.app__navbarLeft {
	display: flex;
	justify-content: space-around;
	align-items: center;
	margin: 0;
	width: 48%;
	padding-left: 20px;
}

.app__navbarRight {
	display: flex;
	justify-content: space-around;
	align-items: center;
	margin: 0;
	width: 30%;
	padding-right: 20px;
}

.signin__btn {
	background: #efaf45;
	border-radius: 5px;
	padding: 10px 25px;
	color: white;
	border: none;
}

.signin__btn a {
	font-size: 14px;
	font-weight: bold;
}

.app__name {
	padding-top: 15%;
}

.main__title {
	color: white;
	font-weight: normal;
	font-size: 5em;
	line-height: 95px;
	text-align: center;
	padding: 0 20%;
}

.top__main__tagline {
	color: white;
	font-weight: 300;
	font-size: 1.4rem;
	text-align: center;
	line-height: 55px;
	padding: 15px 20% 0px 20%;
}

.middle__main__tagline {
	color: white;
	font-weight: 300;
	font-size: 1.4rem;
	text-align: center;
	padding: none;
}

.bottom__main__tagline {
	color: white;
	font-weight: 300;
	font-size: 1.4rem;
	text-align: center;
	line-height: 55px;
	padding: 0px 20% 0px 20%;
}

.app__name p {
	padding: 0px;
	margin: 0px;
}


.main__button {
	padding-top: 3%;
	display: flex;
	justify-content: center;
}

.main__button button {
	background: #efaf45;
	border-radius: 5px;
	border: none;
	padding: 10px 70px;
	color: white;
	font-size: 14px;
	font-weight: bold;
	display: flex;
	justify-content: center;
}

.app__about {
	padding: 0 80px;
	background: linear-gradient(180deg, #f4f4f4 23.86%, #ffffff 70.46%);
	height: 100vh;
	display: none;
}

.app__aboutText {
	/* border-top: 1px solid rgba(0, 0, 0, 0.1);
	border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
	font-family: 'Lato', sans-serif;
}

.app__title {
	text-align: center;
	padding-top: 20%;
	padding-bottom: 40px;
	font-size: 3rem;
	font-weight: 500;
}

.app__descOne {
	text-align: center;
	padding: 0 22vw;
	padding-bottom: 30px;
	line-height: 25px;
	font-size: 1.5rem;
}

.app__descTwo {
	text-align: center;
	padding: 0 22vw;
	padding-bottom: 60px;
	line-height: 25px;
	font-size: 1.5rem;
}

.vector_left_up {
	position: absolute;
	left: -1.55%;
	top: 18%;
	height: 50%
}

.vector_left_down {
	position: absolute;
	top: 75%;
	left: 0px;
	height: 25%;
}

.vector_right_up {
	position: absolute;
	right: 0;
	height: 55%;
	top: 45%;
}

.vector_right_down {
	position: absolute;
	right: 0;
	top: 70%;
	height: 30%;
}

.vector_middle_left {
	position: absolute;
	top: 125%;
	height: 30%;
	left: 0;
}

.vector_middle_right {
	position: absolute;
	top: 215%;
	height: 20%;
	width: 15%;
	right: 0;
}

.white__ellipse {
	position: absolute;
	margin-left: 48.25%;
	width: 3.5%;
	padding-top: 5%;
	/* top: 625px; */
	animation: bounce 0.5s; 
	animation-direction: alternate; 
	animation-timing-function: cubic-bezier(.5, 0.05, 1, .5); 
	animation-iteration-count: 4; 
}

.expand__arrowOne {
	position: absolute;
	/* left: 49.7vw; */
	padding-top: 5.8%;
	margin-left: 49%;
	width: 2%;
	/* top: 640px; */
	animation: bounce 0.5s; 
	animation-direction: alternate; 
	animation-timing-function: cubic-bezier(.5, 0.05, 1, .5); 
	animation-iteration-count: 4; 	
}

.expand__arrowTwo {
	position: absolute;
	/* left: 49.7vw; */
	padding-top: 6.8%;
	margin-left: 49%;
	width: 2%;
	/* top: 648px; */
	animation: bounce 0.5s; 
	animation-direction: alternate; 
	animation-timing-function: cubic-bezier(.5, 0.05, 1, .5); 
	animation-iteration-count: 4; 
}

@keyframes bounce { 
	from { 
		transform: translate3d(0, 0, 0); 
	} 
	to { 
		transform: translate3d(0, 50px, 0); 
	} 
} 

.app__content {
	font-family: 'Lato', sans-serif;
	padding: 0 175px;
	/* background: linear-gradient(180deg, #192738 -0.22%, #1f4b7d 99.97%), #182637; */
		background: linear-gradient(180deg, #182637 0%, rgba(34, 93, 161, 0) 238.01%),
		#225da1;
	color: white;
	height: 100vh;
}

.app__contentTitle {
	text-align: center;
	padding-top: 15%;
	padding-bottom: 40px;
	font-size: 2.5rem;
	font-weight: 500;
}

.app__contentDesc {
	text-align: center;
	padding: 0 15vw;
	padding-bottom: 30px;
	line-height: 25px;
	font-size: 20px;
}

.app__contentParts {
	display: flex;
	justify-content: space-around;
	align-items: center;
	padding-top: 5%;
	padding-bottom: 10%;
}

.app__contentParts h2 {
	font-weight: 500;
	font-size: 2.5rem;
}

.app__contentParts p {
	font-weight: 500;
	font-size: .90rem;
	line-height: 22px;
	padding-top: 15px;
}

.app__contentPartOne,
.app__contentPartTwo,
.app__contentPartThree {
	width: 25%;
	height: 200px;
}

.app__aboutUs {
	padding: 0 15vw;
	margin: 0;
	background: #f5f8fb;
	font-family: 'Lato', sans-serif;
}

.app__aboutUsTitle {
	text-align: center;
	padding-top: 130px;
	padding-bottom: 40px;
	font-size: 35px;
	font-weight: 500;
}

.app__aboutUsDescOne {
	text-align: center;
	padding: 0 13vw;
	margin-bottom: 30px;
	line-height: 25px;
}

.app__aboutUsDescTwo {
	text-align: center;
	padding: 0 13vw;
	margin-bottom: 60px;
	line-height: 25px;
}

.app__meetTheTeamButton {
	margin-top: 80px;
	display: flex;
	justify-content: center;
}

.app__meetTheTeamButton button {
	background: #225da1;
	border-radius: 5px;
	border: none;
	padding: 15px 50px;
	color: white;
	font-weight: 600;
	font-size: 17px;
	line-height: 20px;
	display: flex;
	justify-content: center;
}

.app__rectangleSVG img {
	width: 100vw;
}

.app__platformImages {
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	position: relative;
	padding: 75px;
}

.app__platformimgtop {
	grid-column: 1 / span 8;
	grid-row: 1;
	padding-top: 38%;
	padding-left: 22%;
	z-index: 1;
	filter: drop-shadow(0px 5.94456px 35.6674px rgba(0, 0, 0, 0.1));
}

.app__platformimgdown {
	grid-column: 4 / -1;
	grid-row: 1;
	padding-left: 5%;
	filter: drop-shadow(0px 5.94456px 35.6674px rgba(0, 0, 0, 0.1));
}

.app__signup {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0 18vw;
	font-family: 'Lato', sans-serif;
	padding-top: 125px;
	padding-bottom: 125px;
	background: #fafbfd;
}

.app__signuptext p:first-child {
	font-size: 35px;
	font-weight: 500;
	line-height: 40px;
	padding-bottom: 10px;
}

.app__signuptext p:last-child {
	font-size: 16px;
	font-weight: 400;
	line-height: 20px;
}

.app__signupbtn button {
	background: #efaf45;
	border-radius: 5px;
	border: none;
	padding: 10px 70px;
	color: white;
	font-size: 14px;
	font-weight: bold;
	display: flex;
	justify-content: center;
}

.app__footer {
	background: #182637;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0 10vw;
	padding-top: 125px;
	padding-bottom: 125px;
	color: white;
	font-family: 'Lato', sans-serif;
}

.app__footerleft img {
	padding-bottom: 25px;
}

.app__footerleft p {
	font-size: 15px;
	line-height: 15px;
}

.app__footerright {
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 40%;
}

.app__footerright p {
	font-size: 15px;
	line-height: 20px;
}

button:hover {
	cursor: pointer;
}

/*
mobile optimization, hiding decorative elements when
screen size is small
*/
@media (max-width: 767px) {                  
   .vector_left_up,
   .vector_left_down,
   .vector_middle_left,
   .vector_middle_right,
   .vector_right_down,
   .vector_right_up,
   .app__navbar,
   .app__content,
   .app__team,
   .app__meetTheTeamButton,
   .app__platformImages,
   .app__signupbtn,
   .app__footerright {
      display: none;
   }
}

